# projector

./: 00_registration.py  01_crop_and_rotate.py  SprocketUtils.py  generate_reg_mask.py  logtest.py  movit.sh  picam_cap.py  picam_test.py  picam_utils.py  process.sh  readfiledata.py  reg.txt  requirements.txt  screenlog.0  test_sprocket_detect.py  worker_queue.py
.ipynb_checkpoints/: camsprocket-checkpoint.ipynb
colorgrade/: colorgrade.py
hqcam_capture/: 00_registration.py  01_crop_and_rotate.py  SprocketUtils.py  examine_findsprocket.py  picam_cap.py  picam_utils.py  proc.sh  process.py  process.sh  pyproject.toml  requirements.txt
scripts/: readme.txt  s  svbonycap.sh
scripts/svbonycam/: makefile  opencvcap.py  opencvcap.sh  usbcap.py
v4l2capture/: avx.avs  exptest.py  frames  profile.txt  tdelta.py
v4l2capture/.ipynb_checkpoints/: Untitled2-checkpoint.ipynb  usbcap-checkpoint.py
